--- a/src/Makefile
+++ b/src/Makefile
@@ -6,13 +6,11 @@ LDFLAGS=-l ssh
 PYTHON_LDFLAGS=-l boost_python3 -shared
 
 objects:
-	$(CC) -c -o channel.o channel.cpp
 	$(CC) -c -o session.o session.cpp
-	$(CC) -c -o result.o result.cpp
 	$(CC) -c -o pyssh.o pyssh.cpp
 
 pyssh: objects
-	$(CC) $(LDFLAGS) $(PYTHON_LDFLAGS) -o _pyssh.so session.o result.o channel.o pyssh.o
+	$(CC) $(LDFLAGS) $(PYTHON_LDFLAGS) -o _pyssh.so session.o pyssh.o
 
 clean:
 	rm *.o
