--- a/src/Makefile
+++ b/src/Makefile
@@ -1,16 +1,16 @@
 all: pyssh
 
-CC=clang++ -std=c++11 -fPIC -I /usr/include/python3.2mu/
+CC=clang++ -std=c++11 -fPIC -I /usr/include/python3.2mu/ -O3
 LDFLAGS=-l ssh
 
 PYTHON_LDFLAGS=-l boost_python3 -shared
 
 objects:
-	$(CC) -c -o session.o session.cpp
+	$(CC) -c -o ssh.o ssh.cpp
 	$(CC) -c -o pyssh.o pyssh.cpp
 
 pyssh: objects
-	$(CC) $(LDFLAGS) $(PYTHON_LDFLAGS) -o _pyssh.so session.o pyssh.o
+	$(CC) $(LDFLAGS) $(PYTHON_LDFLAGS) -o _pyssh.so ssh.o pyssh.o
 
 clean:
 	rm *.o
