Now be refactored bytes conversion implementation.

--- a/src/Makefile
+++ b/src/Makefile
@@ -10,11 +10,13 @@ LDFLAGS=-l ssh -l boost_python3 -l boost_filesystem -shared
 objects:
 	mkdir -p .build
 	$(CXX) -c -o .build/ssh.o ssh.cpp
+	$(CXX) -c -o .build/bytes.o bytes.cpp
+	$(CXX) -c -o .build/bytes_converter.o bytes_converter.cpp
 	$(CXX) -c -o .build/sftp.o sftp.cpp
 	$(CXX) -c -o .build/pyssh.o pyssh.cpp
 
 pyssh: objects
-	$(CXX) $(LDFLAGS) -o _pyssh.so .build/ssh.o .build/sftp.o .build/pyssh.o
+	$(CXX) $(LDFLAGS) -o _pyssh.so .build/ssh.o .build/sftp.o .build/pyssh.o .build/bytes_converter.o .build/bytes.o
 
 clean:
 	rm -rf .build
