Fix python 2.7 support on compilation.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,7 +5,8 @@ SET(CMAKE_VERBOSE_MAKEFILE OFF)
 SET(CMAKE_INCLUDE_CURRENT_DIR TRUE)
 
 FIND_PACKAGE(PythonInterp)
-FIND_PACKAGE(PythonLibs)
+FIND_PACKAGE(PythonLibs ${PYTHON_VERSION_STRING} EXACT)
+#MESSAGE(${PYTHON_VERSION_STRING})
 
 FIND_LIBRARY(LIBSSH ssh /usr/lib /usr/local/lib)
 IF (PYTHON_VERSION_MAJOR EQUAL 3)
